--- a/src/main/resources/Pages/events.html
+++ b/src/main/resources/Pages/events.html
@@ -11,12 +11,15 @@
             var queryString = window.location.search;
             var urlParams = new URLSearchParams(queryString);
             var publishersParam = urlParams.get('publishers');
+
             const selectedPublishers = JSON.parse(decodeURIComponent(publishersParam));
-            // Now, selectedPublishers contains the array from the previous page
+            const subscriberId = urlParams.get('subscriberId');
+
+            console.log('Subscriber ID:', subscriberId);
             console.log(selectedPublishers);
 
             //change url to real one i.e. subscriber url and for respective ec2 instance
-            const url = `http://ec2-54-82-71-245.compute-1.amazonaws.com:8082/events?publishers=${encodeURIComponent(JSON.stringify(selectedPublishers))}`;
+            const url = 'http://ec2-54-82-71-245.compute-1.amazonaws.com:8082/events';
 
             function fetchDataAndRender() {
                 // Make an AJAX request to your Java code endpoint
@@ -59,6 +62,23 @@
 
             // Initial fetch when the page loads
             fetchDataAndRender();
+
+            // Function to redirect to the Unsubscribe page
+            function redirectToUnsubscribePage() {
+
+
+                const unsubscribeUrl = "/unsubscribe.html?publishers=" + encodeURIComponent(JSON.stringify(selectedPublishers))
+                    + "&subscriberId=" + encodeURIComponent(subscriberId.toString());
+
+                window.location.href = unsubscribeUrl;
+            }
+
+            //  button to redirect to the Unsubscribe page
+            var unsubscribeButton = document.createElement('button');
+            unsubscribeButton.textContent = 'Unsubscribe from Publishers';
+            unsubscribeButton.addEventListener('click', redirectToUnsubscribePage);
+            document.body.appendChild(unsubscribeButton);
+
         });
     </script>
 </head>
